[gd_scene load_steps=2 format=3 uid="uid://dba2s613cjsxc"]

[ext_resource type="Script" path="res://gui/task_tracking/task_spreadsheet/cells/checkbox_cell.gd" id="1_ejb78"]

[node name="CheckboxCell" type="VBoxContainer"]
focus_mode = 2
mouse_filter = 0
theme_override_constants/separation = 0
script = ExtResource("1_ejb78")

[node name="TopColorRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(40, 20)
layout_mode = 2
mouse_filter = 2

[node name="BottomColorRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(40, 20)
layout_mode = 2
mouse_filter = 2
